--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,13 @@
 <head>
 {% include head.html %}
 </head>
-<body data-gnl="sütun ekranda">
+<body data-gnl="sütun sığdır">
   <header data-gnl="24 24p" class="header">
   {% include header.html %}
   </header>
-  <div data-gnl="1g uzat oluk-çevre ekranda">
-    <div class="sol-bölge" data-gnl="24 24p ekranda" data-kçk="4 24p">{% include icerik.html %}</div>
-    <div data-gnl="24 24p oluk ekranda" data-kçk="20 24p">
+  <div data-gnl="1g uzat oluk-çevre sığdır">
+    <div class="sol-bölge" data-gnl="24 24p sığdır" data-kçk="4 24p">{% include icerik.html %}</div>
+    <div data-gnl="24 24p oluk sığdır" data-kçk="20 24p">
       {% if page.title %}
       <div data-gnl="1 1p" class="sayfa-başlığı">
         <h1 data-gnl="23 24p ortada ortada-ol">{{ page.title }}</h1>
