--- a/_includes/icerik.html
+++ b/_includes/icerik.html
@@ -6,6 +6,7 @@
     <ul>
       <li><a href="/belgeler/kap-orgusu/genlesme-duzeni.html">Genleşme Düzeni</a></li>
       <li><a href="/belgeler/kap-orgusu/konumlama.html">Konumlama</a></li>
+      <li><a href="/belgeler/kap-orgusu/siralama.html">Sıralama</a></li>
       <li><a href="/belgeler/kap-orgusu/olcekler.html">Ölçekler</a></li>
       <li><h6 data-metin="ana gri">Örnekler</h6></li>
       <li><a href="/belgeler/ornekler/kap-orgusu-esit-bolme.html">Eşit Bölme #1</a></li>
