--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,8 @@
   {% include header.html %}
   </header>
   <div data-gnl="1g uzat oluk-çevre sığdır">
-    <div class="sol-bölge" data-gnl="24 24p sığdır" data-kçk="4 24p">{% include icerik.html %}</div>
-    <div data-gnl="24 24p oluk sığdır" data-kçk="20 24p">
+    <div class="sol-bölge" data-gnl="24 24p " data-kçk="4 24p sığdır">{% include icerik.html %}</div>
+    <div data-gnl="24 24p oluk " data-kçk="20 24p sığdır">
       {% if page.title %}
       <div data-gnl="1 1p" class="sayfa-başlığı">
         <h1 data-gnl="23 24p ortada ortada-ol">{{ page.title }}</h1>
