--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -83,12 +83,12 @@
       font-weight: bold;
     }
 
-    h1{font-size:1.5em;}
-      h2{font-size:1.2em;}
-        h3{font-size:1.1em;}
-          h4{font-size:1.0em; font-weight: 500; color:#444;}
-            h5{font-size:1.0em; font-weight: 500; color: #666;}
-              h6{font-size:1.0em; font-weight: 300; color: #888;}
+    h1{font-size:2.2em;}
+      h2{font-size:1.9em;}
+        h3{font-size:1.7em;}
+          h4{font-size:1.5em;}
+            h5{font-size:1.3em;}
+              h6{font-size:1.15em}
 
     h1 + h2,
     h2 + h3,
