--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -1277,6 +1277,7 @@ S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
   position: absolute;
   z-index: -100;
   opacity: 0;
+  padding:10px 0;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   -webkit-box-ordinal-group:3;
       -ms-flex-order:2;
