--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -148,7 +148,8 @@ GS1 KAP ÖRGÜSÜ
               align-items: stretch;
     }
     [data-gnl~="sığdır"]{
-      min-height:1px; height:100%; max-height:100vh;  overflow-y:auto;
+      /* min-height:1px; height:100%; max-height:100vh; overflow-y:auto; */
+      flex: 1 1 0 !important;
     }
     body[data-gnl~="sütun"]{
       min-height:100vh;
