--- a/_includes/icerik.html
+++ b/_includes/icerik.html
@@ -1,18 +1,18 @@
 <ul data-menü="basamak">
-  <li><a href="/belgeler/deveb.html">Giriş</a></li>
-  <li><a href="/belgeler/kurulum.html">Kurulum</a></li>
-  <li><a href="/belgeler/ekran-orgusu.html">Ekran Örgüsü</a>
-  <li><a href="/belgeler/kap-orgusu.html">Kap Örgüsü</a>
+  <li><a href="/belgeler/deveb.html" class="{% if page.url == '/belgeler/deveb.html' %}etkin{% endif %}">Giriş</a></li>
+  <li><a href="/belgeler/kurulum.html" class="{% if page.url == '/belgeler/kurulum.html' %}etkin{% endif %}">Kurulum</a></li>
+  <li><a href="/belgeler/ekran-orgusu.html" class="{% if page.url == '/belgeler/ekran-orgusu.html' %}etkin{% endif %}">Ekran Örgüsü</a>
+  <li><a href="/belgeler/kap-orgusu.html" class="{% if page.url == '/belgeler/kap-orgusu.html' %}etkin{% endif %}">Kap Örgüsü</a>
     <ul>
-      <li><a href="/belgeler/kap-orgusu/genlesme-duzeni.html">Genleşme Düzeni</a></li>
-      <li><a href="/belgeler/kap-orgusu/konumlama.html">Konumlama</a></li>
-      <li><a href="/belgeler/kap-orgusu/siralama.html">Sıralama</a></li>
-      <li><a href="/belgeler/kap-orgusu/olcekler.html" class="{% if page.url == '/belgeler/kap-orgusu/olcekler.html' %}active{% endif %}">Ölçekler</a></li>
+      <li><a href="/belgeler/kap-orgusu/genlesme-duzeni.html" class="{% if page.url == '/belgeler/kap-orgusu/genlesme-duzeni.html' %}etkin{% endif %}">Genleşme Düzeni</a></li>
+      <li><a href="/belgeler/kap-orgusu/konumlama.html" class="{% if page.url == '/belgeler/kap-orgusu/konumlama.html' %}etkin{% endif %}">Konumlama</a></li>
+      <li><a href="/belgeler/kap-orgusu/siralama.html" class="{% if page.url == '/belgeler/kap-orgusu/siralama.html' %}etkin{% endif %}">Sıralama</a></li>
+      <li><a href="/belgeler/kap-orgusu/olcekler.html" class="{% if page.url == '/belgeler/kap-orgusu/olcekler.html' %}etkin{% endif %}">Ölçekler</a></li>
       <li><h6 data-metin="ana gri">Örnekler</h6></li>
-      <li><a href="/belgeler/ornekler/kap-orgusu-esit-bolme.html">Eşit Bölme #1</a></li>
-      <li><a href="/belgeler/ornekler/kap-orgusu-esit-bolme-2.html">Eşit Bölme #2</a></li>
+      <li><a href="/belgeler/ornekler/kap-orgusu-esit-bolme.html" class="{% if page.url == '/belgeler/ornekler/kap-orgusu-esit-bolme.html' %}etkin{% endif %}">Eşit Bölme #1</a></li>
+      <li><a href="/belgeler/ornekler/kap-orgusu-esit-bolme-2.html" class="{% if page.url == '/belgeler/ornekler/kap-orgusu-esit-bolme-2.html' %}etkin{% endif %}">Eşit Bölme #2</a></li>
     </ul>
   </li>
-  <li><a href="/belgeler/renk-orgusu.html">Renk Örgüsü</a></li>
-  <li><a href="/belgeler/terimler.html">Terimler</a></li>
+  <li><a href="/belgeler/renk-orgusu.html" class="{% if page.url == '/belgeler/renk-orgusu.html' %}etkin{% endif %}">Renk Örgüsü</a></li>
+  <li><a href="/belgeler/terimler.html" class="{% if page.url == '/belgeler/terimler.html' %}etkin{% endif %}">Terimler</a></li>
 </ul>
