--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -1405,11 +1405,24 @@ S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
     MENÜ ÖRGÜSÜ s0.1
     Sadece css yöntemiyle kurulmuş sekme örgüsü
 ----------------------------------------------------------------------------- */
-[data-menü] + input{
+label[data-menü] + input{
   display: none;
 }
-[data-menü] + input:checked + ul{
+label[data-menü] + input:checked + ul{
   display: flex !important;
+}
+label[data-menü], [data-menü~="varsayılan"] + input + ul li a{
+  display: inherit;
+  padding: 10px 15px;
+  flex:1 1 0;
+  background-color: #2c2171;
+  color:#fefefe;
+  text-align: center;
+  justify-content: center;
+}
+[data-menü~="varsayılan"] + input + ul li a:hover,
+[data-menü~="varsayılan"] + input + ul li a.etkin{
+  background-color: #3c3181;
 }
 
 /* SÖZCÜKLER VE ANLAMLARI */
