--- a/assets/css/surumler/deveb.1.0.css
+++ b/assets/css/surumler/deveb.1.0.css
@@ -1454,7 +1454,29 @@ S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
       -ms-flex-direction: row-reverse;
           flex-direction: row-reverse;
 }
-
+/* ==========================================================================
+    MENÜ ÖRGÜSÜ s0.1
+    Sadece css yöntemiyle kurulmuş sekme örgüsü
+----------------------------------------------------------------------------- */
+label[data-menü] + input{
+  display: none;
+}
+label[data-menü] + input:checked + ul{
+  display: flex !important;
+}
+label[data-menü], [data-menü~="varsayılan"] + input + ul li a{
+  display: inherit;
+  padding: 10px 15px;
+  flex:1 1 0;
+  background-color: #2c2171;
+  color:#fefefe;
+  text-align: center;
+  justify-content: center;
+}
+[data-menü~="varsayılan"] + input + ul li a:hover,
+[data-menü~="varsayılan"] + input + ul li a.etkin{
+  background-color: #3c3181;
+}
 
 /* SÖZCÜKLER VE ANLAMLARI */
 /* İLKER: İlk, önce, başta, ilk doğan, büyük olan (bu sözcüklerin birleşimidir) */
