--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
       </div>
     </div>
   </div>
-  <footer data-gnl="24">
+  <footer data-gnl="24 24p">
   {% include foot.html %}
   </footer>
 </body>
