--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
       <li><a href="/belgeler/takim.html">Takım</a></li>
       <li><a href="/belgeler/tarayici-destegi.html">Tarayıcı Desteği</a></li>
     </ul>
-    <ul class="menü-genel" data-ort="0 sağda-ol göbekte-ol">
+    <ul class="menü-genel" data-ort="0 sağda-ol göbekte-ol küçükleri-gizle">
       <li><a href="https://github.com/djangoogreniyorum/deveb"><i class="fa fa-github" aria-hidden="true"></i></a></li>
       <li><a href="https://www.facebook.com/datadeveb/"> <i class="fa fa-facebook" aria-hidden="true"></i></a></li>
             <li><a href="https://twitter.com/datadeveb"> <i class="fa fa-twitter" aria-hidden="true"></i></a></li>
