--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,12 +3,12 @@
     <ul class="menü-genel" data-gnl="0 göbekte">
       <li><a href="https://data-deveb.github.io" class="logo beri-sol-1">deveb</a></li>
     </ul>
-    <ul class="menü-genel" data-gnl="1 1p göbekte ortada" data-ort="0">
+    <ul class="menü-genel" data-gnl="1 1p göbekte ortada" data-kçk="0">
       <li><a href="/belgeler/deveb.html">Belgeler</a></li>
       <li><a href="/belgeler/takim.html">Takım</a></li>
       <li><a href="/belgeler/tarayici-destegi.html">Tarayıcı Desteği</a></li>
     </ul>
-    <ul class="menü-genel" data-ort="0 sağda-ol göbekte-ol küçükleri-gizle">
+    <ul class="menü-genel" data-kçk="0 sağda-ol göbekte-ol küçükleri-gizle">
       <li><a href="https://github.com/djangoogreniyorum/deveb"><i class="fa fa-github" aria-hidden="true"></i></a></li>
       <li><a href="https://www.facebook.com/datadeveb/"> <i class="fa fa-facebook" aria-hidden="true"></i></a></li>
             <li><a href="https://twitter.com/datadeveb"> <i class="fa fa-twitter" aria-hidden="true"></i></a></li>
