--- a/_includes/icerik.html
+++ b/_includes/icerik.html
@@ -1,18 +1,25 @@
-<ul data-menü="basamak">
-  <li><a href="/belgeler/deveb.html" class="{% if page.url == '/belgeler/deveb.html' %}etkin{% endif %}">Giriş</a></li>
-  <li><a href="/belgeler/kurulum.html" class="{% if page.url == '/belgeler/kurulum.html' %}etkin{% endif %}">Kurulum</a></li>
-  <li><a href="/belgeler/ekran-orgusu.html" class="{% if page.url == '/belgeler/ekran-orgusu.html' %}etkin{% endif %}">Ekran Örgüsü</a>
-  <li><a href="/belgeler/kap-orgusu.html" class="{% if page.url == '/belgeler/kap-orgusu.html' %}etkin{% endif %}">Kap Örgüsü</a>
-    <ul>
-      <li><a href="/belgeler/kap-orgusu/genlesme-duzeni.html" class="{% if page.url == '/belgeler/kap-orgusu/genlesme-duzeni.html' %}etkin{% endif %}">Genleşme Düzeni</a></li>
-      <li><a href="/belgeler/kap-orgusu/konumlama.html" class="{% if page.url == '/belgeler/kap-orgusu/konumlama.html' %}etkin{% endif %}">Konumlama</a></li>
-      <li><a href="/belgeler/kap-orgusu/siralama.html" class="{% if page.url == '/belgeler/kap-orgusu/siralama.html' %}etkin{% endif %}">Sıralama</a></li>
-      <li><a href="/belgeler/kap-orgusu/olcekler.html" class="{% if page.url == '/belgeler/kap-orgusu/olcekler.html' %}etkin{% endif %}">Ölçekler</a></li>
-      <li><h6 data-metin="ana gri">Örnekler</h6></li>
-      <li><a href="/belgeler/ornekler/kap-orgusu-esit-bolme.html" class="{% if page.url == '/belgeler/ornekler/kap-orgusu-esit-bolme.html' %}etkin{% endif %}">Eşit Bölme #1</a></li>
-      <li><a href="/belgeler/ornekler/kap-orgusu-esit-bolme-2.html" class="{% if page.url == '/belgeler/ornekler/kap-orgusu-esit-bolme-2.html' %}etkin{% endif %}">Eşit Bölme #2</a></li>
-    </ul>
-  </li>
-  <li><a href="/belgeler/renk-orgusu.html" class="{% if page.url == '/belgeler/renk-orgusu.html' %}etkin{% endif %}">Renk Örgüsü</a></li>
-  <li><a href="/belgeler/terimler.html" class="{% if page.url == '/belgeler/terimler.html' %}etkin{% endif %}">Terimler</a></li>
-</ul>
+
+<div data-menü="varsayılan" data-gnl="1 1p" data-kçk="0">
+  <input id="menu" name="menu1" type="checkbox">
+  <label data-gnl="1 1p ortada" data-kçk="gizle" for="menu">MENÜ</label>
+  <ul data-menü="basamak" data-gnl="1 1p" data-kçk="0 küçükleri-gizle">
+
+      <li><a href="/belgeler/deveb.html" class="{% if page.url == '/belgeler/deveb.html' %}etkin{% endif %}">Giriş</a></li>
+      <li><a href="/belgeler/kurulum.html" class="{% if page.url == '/belgeler/kurulum.html' %}etkin{% endif %}">Kurulum</a></li>
+      <li><a href="/belgeler/ekran-orgusu.html" class="{% if page.url == '/belgeler/ekran-orgusu.html' %}etkin{% endif %}">Ekran Örgüsü</a>
+      <li><a href="/belgeler/kap-orgusu.html" class="{% if page.url == '/belgeler/kap-orgusu.html' %}etkin{% endif %}">Kap Örgüsü</a>
+        <ul>
+          <li><a href="/belgeler/kap-orgusu/genlesme-duzeni.html" class="{% if page.url == '/belgeler/kap-orgusu/genlesme-duzeni.html' %}etkin{% endif %}">Genleşme Düzeni</a></li>
+          <li><a href="/belgeler/kap-orgusu/konumlama.html" class="{% if page.url == '/belgeler/kap-orgusu/konumlama.html' %}etkin{% endif %}">Konumlama</a></li>
+          <li><a href="/belgeler/kap-orgusu/siralama.html" class="{% if page.url == '/belgeler/kap-orgusu/siralama.html' %}etkin{% endif %}">Sıralama</a></li>
+          <li><a href="/belgeler/kap-orgusu/olcekler.html" class="{% if page.url == '/belgeler/kap-orgusu/olcekler.html' %}etkin{% endif %}">Ölçekler</a></li>
+          <li><h6 data-metin="ana gri">Örnekler</h6></li>
+          <li><a href="/belgeler/ornekler/kap-orgusu-esit-bolme.html" class="{% if page.url == '/belgeler/ornekler/kap-orgusu-esit-bolme.html' %}etkin{% endif %}">Eşit Bölme #1</a></li>
+          <li><a href="/belgeler/ornekler/kap-orgusu-esit-bolme-2.html" class="{% if page.url == '/belgeler/ornekler/kap-orgusu-esit-bolme-2.html' %}etkin{% endif %}">Eşit Bölme #2</a></li>
+        </ul>
+      </li>
+      <li><a href="/belgeler/renk-orgusu.html" class="{% if page.url == '/belgeler/renk-orgusu.html' %}etkin{% endif %}">Renk Örgüsü</a></li>
+      <li><a href="/belgeler/terimler.html" class="{% if page.url == '/belgeler/terimler.html' %}etkin{% endif %}">Terimler</a></li>
+
+  </ul>
+</div>
