--- a/_includes/icerik.html
+++ b/_includes/icerik.html
@@ -1,7 +1,7 @@
 
-<div data-menü="varsayılan" data-gnl="1 1p" data-kçk="0">
+<div data-menü="boş" data-gnl="1 1p" data-kçk="0">
   <input id="menu" name="menu1" type="checkbox">
-  <label data-gnl="1 1p ortada" data-kçk="gizle" for="menu">MENÜ</label>
+  <label data-gnl="1 1p ortada" data-kçk="gizle" for="menu">BELGELER</label>
   <ul data-menü="basamak" data-gnl="1 1p" data-kçk="0 küçükleri-gizle">
 
       <li><a href="/belgeler/deveb.html" class="{% if page.url == '/belgeler/deveb.html' %}etkin{% endif %}">Giriş</a></li>
