--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -1503,6 +1503,8 @@ S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
   justify-content: center;
   border-bottom: 1px solid rgba(255,255,255,.05);
 }
+[data-menü~="varsayılan"] ul li a
+{  padding:5px 0 5px 5px;}
 [data-menü~="varsayılan"] > input:checked + label{
   background-color: gray;
 }
