--- a/assets/css/deveb.genel.css
+++ b/assets/css/deveb.genel.css
@@ -267,7 +267,7 @@ ul.liste-temiz li{
 	margin-left: 2px;
 }
 [data-menü~="basamak"] li{
-	padding:5px 0 5px 10px;
+	padding-left:5px;
 	margin-bottom: 5px;
 	width:100%;
 }
@@ -280,7 +280,7 @@ ul.liste-temiz li{
 	-ms-animation:     lamba 1s infinite;
 }
 [data-menü~="basamak"] li > ul > li:first-child{
-	margin-top:15px;}
+	margin-top:10px;}
 
 	@-webkit-keyframes lamba {
 	  from {border-color: #abcdef;}
